Removed dependency on google guava