@@ -1,6 +1,5 @@
 package nl.meg.jcr.traversal.internal;
 
-import com.google.common.collect.TreeTraverser;
 import nl.meg.jcr.HippoNode;
 import org.junit.Before;
 import org.junit.Test;
@@ -13,6 +12,7 @@ import java.util.List;
 import java.util.Optional;
 
 import static java.util.Arrays.asList;
+import static java.util.stream.Collectors.toList;
 import static org.hamcrest.CoreMatchers.is;
 import static org.junit.Assert.assertThat;
 import static org.mockito.Mockito.when;
@@ -48,19 +48,19 @@ public class AncestorTraverserImplTest {
 
     @Test
     public void testTraversePreOrder() {
-        final List<HippoNode> ancestors = traverser.preOrderTraversal(n0).toList();
+        final List<HippoNode> ancestors = traverser.preOrderTraversal(n0).collect(toList());
         assertThat(ancestors, is(asList(n0, n1, n2, n3, n4)));
     }
 
     @Test
     public void testTraversePostOrder() {
-        final List<HippoNode> ancestors = traverser.postOrderTraversal(n0).toList();
+        final List<HippoNode> ancestors = traverser.postOrderTraversal(n0).collect(toList());
         assertThat(ancestors, is(asList(n4, n3, n2, n1, n0)));
     }
 
     @Test
     public void testTraverseBreadthFirst() {
-        final List<HippoNode> ancestors = traverser.breadthFirstTraversal(n0).toList();
+        final List<HippoNode> ancestors = traverser.breadthFirstTraversal(n0).collect(toList());
         assertThat(ancestors, is(asList(n0, n1, n2, n3, n4)));
     }
 
