@@ -1,6 +1,5 @@
 package nl.meg.jcr.traversal.internal;
 
-import com.google.common.collect.TreeTraverser;
 import nl.meg.AbstractMockitoTest;
 import nl.meg.jcr.HippoNode;
 import org.junit.Before;
@@ -12,6 +11,7 @@ import java.util.List;
 import java.util.stream.Stream;
 
 import static java.util.Arrays.asList;
+import static java.util.stream.Collectors.toList;
 import static org.hamcrest.CoreMatchers.is;
 import static org.junit.Assert.assertThat;
 import static org.mockito.Mockito.when;
@@ -41,19 +41,19 @@ public class DescendantTraverserImplTest extends AbstractMockitoTest {
 
     @Test
     public void testGetDescendantsPreOrder() throws RepositoryException {
-        final List<HippoNode> preOrderResult = traverser.preOrderTraversal(n0).toList();
+        final List<HippoNode> preOrderResult = traverser.preOrderTraversal(n0).collect(toList());
         assertThat(preOrderResult, is(asList(n0, n1, n2, n4, n5, n3)));
     }
 
     @Test
     public void testGetDescendantsPostOrder() throws RepositoryException {
-        final List<HippoNode> postOrderResult = traverser.postOrderTraversal(n0).toList();
+        final List<HippoNode> postOrderResult = traverser.postOrderTraversal(n0).collect(toList());
         assertThat(postOrderResult, is(asList(n1, n4, n5, n2, n3, n0)));
     }
 
     @Test
     public void testGetDescendantsBreadthFirst() throws RepositoryException {
-        final List<HippoNode> postOrderResult = traverser.breadthFirstTraversal(n0).toList();
+        final List<HippoNode> postOrderResult = traverser.breadthFirstTraversal(n0).collect(toList());
         assertThat(postOrderResult, is(asList(n0, n1, n2, n3, n4, n5)));
     }
 
